# newtons-method

./: CMakeLists.txt  README.md
src/: main.c
